wordpress/yaml/svc-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-mariadb
  namespace: dev
  labels:
    app: mariadb
spec:
  type: ClusterIP
  selector:
    app: mariadb
  ports:
    - name: bbdd
      port: 3306
      targetPort: bbdd
