wordpress/yaml/svc-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-wordpress
  namespace: dev
  labels:
    app: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
  ports:
    - name: wp
      port: 80
      nodePort: 30000
      targetPort: wp
